--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -1,10 +1,15 @@
 ﻿extends layout
 
+prepend scripts
+  script.
+    guiName = 'EmbedEditArticle'
+
 append styles
   link(rel='stylesheet', href='/stylesheets/edit_article.css')
 
 block content
-  textarea#content
+  textarea#input
+  textarea#output
   div
     input#accept(type="button", value="Accept")
     input#cancel(type="button", value="Cancel")
