--- a/public/public/stylesheets/header.styl
+++ b/public/public/stylesheets/header.styl
@@ -1,2 +1,23 @@
-﻿#search-run, #avatar, #options
-  width 40px
+﻿#searchDo, #avatar, #options
+  width 25px
+
+#parentHeader
+  background-color black
+
+#childHeader
+  padding-top 13px
+  padding-bottom 10px
+
+#search
+  width 200px
+  margin 0 auto
+  margin-left 210px
+
+#searchInput
+  border-radius 2px
+
+#logo
+  width 201px
+
+#rightHeader
+  margin-left 180px
