--- a/public/views/header/header.jade
+++ b/public/views/header/header.jade
@@ -1,8 +1,9 @@
 ﻿- var authenticated = true;
 
-#header
-  include header_common
-  if authenticated
-    include header_logged
-  else
-    include header_not_logged
+#parentHeader.parentContainer
+  #childHeader.childContainer
+    include header_common
+    if authenticated
+      include header_logged
+    else
+      include header_not_logged
