--- a/public/views/header/header_common.jade
+++ b/public/views/header/header_common.jade
@@ -1,4 +1,4 @@
-﻿img(src="/images/logo.png")
-a(href="Browse.html") Browse
-input#search(type="input")
-input#search-run(type="image", src="/images/magnifying_glass.png")
+﻿img#logo(src="/images/logo2.png", href="/") 
+span#search
+  input#searchInput(type="input")
+  input#searchDo(type="image", src="/images/search.png")
