--- a/public/views/header/header_logged.jade
+++ b/public/views/header/header_logged.jade
@@ -1,4 +1,5 @@
-﻿img#avatar(src="/images/avatar.png")
-Erandros
-input#options(type="image", src="/images/wrench.png")
-a(href="/logout") Log out
+﻿span#rightHeader
+  img#avatar(src="/images/avatar.png")
+  | Erandros
+  input#options(type="image", src="/images/wrench.png")
+  button(href="/logout") Log out
