--- a/public/views/header/header_not_logged.jade
+++ b/public/views/header/header_not_logged.jade
@@ -1,2 +1,3 @@
-﻿a(href="/login") Log in
-a(href="/register") Register
+﻿span#rightHeader
+  button(href="/login") Log in
+  button(href="/register") Register
