--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -1,3 +1,20 @@
-﻿#content
-  width 300px
-  height 200px
+﻿#article 
+  width 480px
+  padding 20px
+  border-radius 3px
+  border solid 1px #CFCFCF
+
+#content
+  width 470px
+  height 250px
+  padding-left 15px
+
+h1
+  display inline
+
+#articleSeparator
+  border-bottom solid 1px
+  height 20px
+
+#author
+  padding-left 15px
