--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -5,11 +5,17 @@ prepend scripts
     guiName = 'EmbedEditArticle'
 
 append styles
+  link(rel='stylesheet', href='/stylesheets/article.css')
   link(rel='stylesheet', href='/stylesheets/edit_article.css')
 
-block content
-  textarea#input
-  textarea#output
+block main
+  #article
+    h1#title  
+    i#author by
+    #articleSeparator.marginBottom
+    textarea#content
+  #preview
+
   div
-    input#accept(type="button", value="Accept")
-    input#cancel(type="button", value="Cancel")
+    button#saveBtn Save
+    button#cancelBtn Cancel
