Better edit_article view

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -1,20 +1,1 @@
-﻿#article 
-  width 480px
-  padding 20px
-  border-radius 3px
-  border solid 1px #CFCFCF
-
-#content
-  width 470px
-  height 250px
-  padding-left 15px
-
-h1
-  display inline
-
-#articleSeparator
-  border-bottom solid 1px
-  height 20px
-
-#author
-  padding-left 15px
+﻿
