--- a/public/public/stylesheets/edit_article.styl
+++ b/public/public/stylesheets/edit_article.styl
@@ -1,2 +1,21 @@
 ﻿#content
   padding-left 0px
+
+#article
+  float left
+
+#buttons
+  clear both
+
+.article-frame
+  float left
+
+#output
+  margin-left 20px
+
+.article-header
+  input
+    height 1.2em
+    width 300px
+    font-family monospace
+    font-size 1.2em
