--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -25,5 +25,28 @@ button
   width 1050px
   margin 0 auto
 
-.marginBottom
-  margin-bottom 15px
+.article-frame
+  width 440px
+  height 375px
+  padding 20px
+  border-radius 3px
+  border solid 1px #CFCFCF
+
+.article-content
+  width 430px
+  height 250px
+
+h1
+  display inline
+
+.article-separator
+  border-bottom solid 1px
+  height 20px
+  margin-bottom: 15px;
+
+.article-header
+  height 25px
+
+#author
+  padding-left 15px
+
