--- a/public/views/article.jade
+++ b/public/views/article.jade
@@ -8,7 +8,7 @@ append styles
   link(rel='stylesheet', href='/stylesheets/article.css')
 
 block main
-  #article
+  .article-frame
     h1#title  
     i#author by
     #articleSeparator.marginBottom
