Add example for Romi

--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -4,6 +4,9 @@ prepend scripts
   script.
     guiName = 'EmbedEditArticle'
 
+append scripts
+  script(type='text/javascript', src='/scripts/lib/marked.js')
+
 append styles
   link(rel='stylesheet', href='/stylesheets/edit_article.css')
 
