Separate previewable article

--- a/public/views/create_article.jade
+++ b/public/views/create_article.jade
@@ -1,15 +1,18 @@
 ﻿extends layout
 
-append styles
-  link(rel='stylesheet', href='/stylesheets/create_article.css')
-
 prepend scripts
   script.
     guiName = 'EmbedCreateArticle'
 
-block content
-  input#title(type="text")
-  textarea#content
-  div
-    input#create(type="button", value="Create")
-    input#cancel(type="button", value="Cancel")
+append scripts
+  script(type='text/javascript', src='/scripts/lib/marked.js')
+
+append styles
+  link(rel='stylesheet', href='/stylesheets/edit_article.css')
+
+block main
+  include previewable-article-frame
+
+  #buttons
+    button#saveBtn Save
+    button#cancelBtn Cancel
