--- a/public/views/create_article.jade
+++ b/public/views/create_article.jade
@@ -14,5 +14,5 @@ block main
   include previewable-article-frame
 
   #buttons
-    button#saveBtn Save
-    button#cancelBtn Cancel
+    button#create Create
+    button#cancel Cancel
