--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -8,6 +8,7 @@ html
     link(rel="stylesheet", href="/stylesheets/layout.css")
     script(type='text/javascript', src='/scripts/lib/jquery-2.1.1.js')
     script(type='text/javascript', src='/scripts/embed-layout.js')
+    script(type='text/javascript', src='/scripts/lib/marked.js')
     script(src="/scripts/katex.min.js")
 
     block styles
