--- a/public/views/previewable-article-frame.jade
+++ b/public/views/previewable-article-frame.jade
@@ -4,9 +4,4 @@
     i#author by
   .article-separator.marginBottom
   textarea.article-content
-#output.article-frame
-  .article-header
-    h1.article-title  
-    i#author by
-  .article-separator.marginBottom
-  .article-content
+include rendered_article
