Lots of changes

--- a/public/public/stylesheets/index.styl
+++ b/public/public/stylesheets/index.styl
@@ -1,5 +1,15 @@
-﻿body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-a
-  color: #00B7FF
+﻿.article-thumb
+  height 80px
+  width 600px
+  border-radius 3px
+  border solid 1px #cfcfcf
+
+.title
+  margin-left 10px
+  margin-top 6px
+  font-size 2em
+  font-weight bold
+
+.content
+  margin-left 20px
+  margin-top 11px
