--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,5 +1,12 @@
 ﻿extends layout
 
-block content
-  h1= title
-  p Welcome to #{title}
+prepend scripts
+  script.
+    guiName = 'EmbedIndexGui'
+
+append styles
+  link(rel='stylesheet', href='/stylesheets/index.css')
+
+block main
+  include article-thumb
+
