List articles in front page

--- a/public/views/article-thumb.jade
+++ b/public/views/article-thumb.jade
@@ -1,3 +1,6 @@
-.article-thumb
-  .title Title
-  .content contenido
+script#article-thumb-template(type="x-tmpl-mustache")
+  {{#articles}}
+  .article-thumb
+    .title {{title}}
+    .content {{content}}
+  {{/articles}}
