--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -9,6 +9,7 @@ html
     script(type='text/javascript', src='/scripts/lib/jquery-2.1.1.js')
     script(type='text/javascript', src='/scripts/embed-layout.js')
     script(type='text/javascript', src='/scripts/lib/marked.js')
+    script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.js')
     script(src="/scripts/katex.min.js")
 
     block styles
