Add mustache and template front page

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -8,5 +8,5 @@ append styles
   link(rel='stylesheet', href='/stylesheets/index.css')
 
 block main
-  include article-thumb
+  include templates/article-thumb
 
