--- a/public/views/header/header_common.jade
+++ b/public/views/header/header_common.jade
@@ -1,4 +1,5 @@
-﻿img#logo(src="/images/logo2.png", href="/") 
+﻿a(href="/")
+  img#logo(src="/images/logo2.png", href="/") 
 span#search
   input#searchInput(type="input")
   input#searchDo(type="image", src="/images/search.png")
