Add redirect to cancel button on edit_article view

--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -12,5 +12,5 @@ block main
   include previewable-article-frame
 
   #buttons
-    button#saveBtn Save
-    button#cancelBtn Cancel
+    button#save Save
+    button#cancel Cancel
