Halfway register process

--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -10,16 +10,21 @@ a
   padding: 20px
 
 button
-  font-family Arial,sans-serif
+  font-family 'Helvetica Neue',Helvetica,Arial,sans-serif;
   color white
-  border 1px solid transparent
-  border-radius 3px
+  border 1px solid
+  border-radius 6px
   padding 6px 10px 6px 10px
   border-style solid
   font-weight bold
   font-size 11px
-  background-color #428bca
+  background-image -webkit-linear-gradient(top, #18D2E0 0, #20AEC6 100%)
+  text-shadow: rgba(0, 0, 0, 0.2) 0px -1px 0px;
   cursor pointer
+  
+button:hover
+  background-color #1C97A4;
+  background-image none
 
 .childContainer
   width 1050px
