--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -1,6 +1,7 @@
 ﻿body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
   margin 0px
+  min-width 1070px
 a
   color: #00B7FF
   text-decoration: none;
