--- a/public/views/create_article.jade
+++ b/public/views/create_article.jade
@@ -2,7 +2,7 @@
 
 prepend scripts
   script.
-    guiName = 'EmbedCreateArticle'
+    guiName = 'CreateArticleGui'
 
 append styles
   link(rel='stylesheet', href='/stylesheets/edit_article.css')
