--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -2,7 +2,7 @@
 
 prepend scripts
   script.
-    guiName = 'EmbedEditArticle'
+    guiName = 'EditArticleGui'
 
 append styles
   link(rel='stylesheet', href='/stylesheets/edit_article.css')
