--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -2,7 +2,7 @@
 
 prepend scripts
   script.
-    guiName = 'EmbedIndexGui'
+    guiName = 'IndexGui'
 
 append styles
   link(rel='stylesheet', href='/stylesheets/index.css')
