--- a/public/views/article.jade
+++ b/public/views/article.jade
@@ -2,7 +2,7 @@
 
 prepend scripts
   script.
-    guiName = 'EmbedArticle'
+    guiName = 'ArticleGui'
 
 append styles
   link(rel='stylesheet', href='/stylesheets/article.css')
