--- a/public/views/header/header_not_logged.jade
+++ b/public/views/header/header_not_logged.jade
@@ -1,3 +1,3 @@
 ﻿span#rightHeader
   button(href="/login") Log in
-  button(href="/register") Register
+  button(onclick="location.href='/register'") Register
