--- a/public/views/article.jade
+++ b/public/views/article.jade
@@ -9,7 +9,7 @@ append styles
 
 block main
   input#article-id(type="hidden" value= id)
-  include rendered_article
+  include templates/rendered-article
 
   #buttons
     button#editBtn(href= editUrl) Edit
