--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -11,6 +11,7 @@ a
   padding: 20px
 
 button
+input[type="submit"]
   font-family 'Helvetica Neue',Helvetica,Arial,sans-serif;
   color white
   border 0px solid
