--- a/public/views/login.jade
+++ b/public/views/login.jade
@@ -10,9 +10,9 @@ prepend scripts
 
 block main
   .form-outer
-    .form-inner
+    form.form-inner
       input.form-input#username(type="text" placeholder="username")
       input.form-input#password(type="password" placeholder="password")
       .buttons
-        button#login Log in
+        input#login(type="submit")
         button#cancel Cancel
