--- a/public/views/templates/article-thumb.jade
+++ b/public/views/templates/article-thumb.jade
@@ -1,6 +1,6 @@
 script#article-thumb-template(type="x-tmpl-mustache")
-  {{#articles}}
+  | {{#articles}}
   .article-thumb
     a.title(href="{{url}}") {{title}}
     .content {{content}}
-  {{/articles}}
+  | {{/articles}}
