Log in button label

--- a/public/views/login.jade
+++ b/public/views/login.jade
@@ -14,5 +14,5 @@ block main
       input.form-input#username(type="text" placeholder="username")
       input.form-input#password(type="password" placeholder="password")
       .buttons
-        input#login(type="submit")
+        input#login(type="submit" value="Log in")
         button#cancel Cancel
