Add dependencies template

--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -31,12 +31,13 @@ button:hover
   width 1050px
   margin 0 auto
 
-.article-frame
+.rectangular-frame
   width 440px
   height 375px
   padding 20px
   border-radius 3px
   border solid 1px #CFCFCF
+  float left
 
 .article-content
   width 430px
