--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -4,7 +4,7 @@ html
     meta(charset='utf-16')
     title= title
     link(rel='stylesheet', href='/stylesheets/header.css')
-    link(rel="stylesheet", href="/scripts/katex.min.css")
+    link(rel="stylesheet", href="/stylesheets/katex.min.css")
     link(rel="stylesheet", href="/stylesheets/layout.css")
     script(type='text/javascript', src='/scripts/lib/jquery-2.1.1.js')
     script(type='text/javascript', src='/scripts/embed-layout.js')
