--- a/public/public/stylesheets/edit_article.styl
+++ b/public/public/stylesheets/edit_article.styl
@@ -4,9 +4,6 @@
 #article
   float left
 
-#buttons
-  clear both
-
 #output
   margin-left 20px
 
@@ -16,3 +13,15 @@
     width 300px
     font-family monospace
     font-size 1.2em
+
+#second-floor
+  clear both
+  padding-top 20px
+
+#buttons
+  float left
+  margin-left 20px
+
+
+
+
