--- a/public/views/templates/dependencies.jade
+++ b/public/views/templates/dependencies.jade
@@ -1,23 +1,13 @@
-#dependency-frame.rectangular-frame
+#dependencies.rectangular-frame
   h1 Dependencies
-  ul#Dependencies
-    li 
-      img.avatar(src="/images/avatar.png")
-      | How to do massive damage, 
-      i by 
-        a(href='/user/') Michael
-    li 
-      img.avatar(src="/images/avatar.png")
-      | How to do open a cabinet, 
-      i by 
-        a(href='/user/') John
-    li 
-      img.avatar(src="/images/avatar.png")
-      | How to do stop a Car, 
-      i by 
-        a(href='/user/') Tim
-    li 
-      img.avatar(src="/images/avatar.png")
-      | How to be the most awesome wife ever, 
-      i by 
-        a(href='/user/') Romina
+  ul
+    script#dependencies-template(type="x-tmpl-mustache")
+      li
+        img.avatar(src="/images/avatar.png")
+        | {{#dependencies}}
+        a.title(href="{{url}}") {{title}}
+        i by {{author}}
+        | {{/dependencies}}
+
+    input#dependencyFound(type="text") 
+    button#add Add dependency
