Add ability to add dependencies

--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -6,6 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/header.css')
     link(rel="stylesheet", href="/stylesheets/katex.min.css")
     link(rel="stylesheet", href="/stylesheets/layout.css")
+    link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/selectize.js/0.11.0/css/selectize.css")
     script(type='text/javascript', src='/scripts/lib/jquery-2.1.1.js')
     script(type='text/javascript', src='/scripts/embed-layout.js')
     script(type='text/javascript', src='/scripts/lib/marked.js')
