Line numbers in marked

--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -11,7 +11,7 @@ block main
   input#article-id(type="hidden" value= id)
   include templates/previewable-article
   #second-floor
-    include templates/dependencies
+    include templates/editable-dependencies
     #buttons
       button#save Save
       button#cancel Cancel
