Add 'Add dependency' button

--- a/public/views/templates/editable-dependencies.jade
+++ b/public/views/templates/editable-dependencies.jade
@@ -8,5 +8,7 @@
         img.avatar(src="/images/avatar.png")
         a.title(href="{{url}}") {{title}}
         i  by Him 
+        input.removeDependency(type="image" src="/images/remove.png")
       {{/deps}}
     input#dependencyFound(type="text")
+    button#add Add Dependency
