--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -8,8 +8,9 @@ html
     link(rel="stylesheet", href="/stylesheets/layout.css")
     link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/selectize.js/0.11.0/css/selectize.css")
     script(type='text/javascript', src='/scripts/lib/jquery-2.1.1.js')
-    script(type='text/javascript', src='/scripts/embed-layout.js')
+    script(type='text/javascript', src='/scripts/lib/diff.js')
     script(type='text/javascript', src='/scripts/lib/marked.js')
+    script(type='text/javascript', src='/scripts/embed-layout.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/selectize.js/0.11.0/js/standalone/selectize.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.js')
     script(src="/scripts/katex.min.js")
