Add version system and refactor some code

--- a/public/public/stylesheets/edit_article.styl
+++ b/public/public/stylesheets/edit_article.styl
@@ -4,7 +4,7 @@
 #article
   float left
 
-#output
+#output, #dependencies
   margin-left 20px
 
 .article-header
@@ -17,10 +17,6 @@
 #second-floor
   clear both
   padding-top 20px
-
-#buttons
-  float left
-  margin-left 20px
 
 .removeDependency
   width 20px
