Better design, Add qtip2

--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -13,8 +13,9 @@ block main
   #second-floor
     #save-frame.rectangular-frame
       h1 Changes description
-        input#changesDescription.selectize-input(type="text" placeholder="Write changes done to the article...")
-      #buttons
-        button#save Save
-        button#cancel Cancel
+        div
+          input#changesDescription.selectize-input(type="text" placeholder="Write changes done to the article...")
+        #buttons
+          button#save Save
+          button#cancel Cancel
     include templates/editable-dependencies
