--- a/public/views/templates/editable-dependencies.jade
+++ b/public/views/templates/editable-dependencies.jade
@@ -10,5 +10,5 @@
         i  by Him 
         input.removeDependency(type="image" src="/images/remove.png")
       {{/deps}}
-    input#dependencyFound(type="text")
-    button#add Add Dependency
+  select#dependencyFound(type="text" placeholder="Type words of the article...")
+  button#add Add Dependency
