--- a/public/public/stylesheets/index.styl
+++ b/public/public/stylesheets/index.styl
@@ -6,10 +6,11 @@
 
 .title
   margin-left 10px
-  margin-top 6px
+  margin-top 5px
   font-size 2em
   font-weight bold
+  display inline-block
 
 .content
   margin-left 20px
-  margin-top 11px
+  margin-top 3px
