Add animation to index

--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -15,6 +15,7 @@ html
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/selectize.js/0.11.0/js/standalone/selectize.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/jquery.qtip.min.js')
+    script(type='text/javascript', src='//cdn.jsdelivr.net/velocity/1.1.0/velocity.min.js')
     script(src="/scripts/katex.min.js")
 
     block styles
