--- a/public/views/templates/editable-dependencies.jade
+++ b/public/views/templates/editable-dependencies.jade
@@ -10,5 +10,5 @@
         i  by Him 
         input.removeDependency(type="image" src="/images/remove.png")
       {{/deps}}
-  select#dependencyFound(type="text" placeholder="Type words of the article...")
+  select#dependencyFound(type="text" placeholder="Type words included in the title of the article you want to depend on...")
   button#add Add Dependency
