Start development of proposals

--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -62,5 +62,10 @@ div.article-content
   
 .article-title
   font-size: 1.75em;
+  
+#output.rectangular-frame
+  margin-left 20px
 
-
+#footer
+  height 20px
+  clear both
