--- a/public/views/add_proposal.jade
+++ b/public/views/add_proposal.jade
@@ -16,4 +16,4 @@ block main
         div
           input#changesDescription.selectize-input(type="text" placeholder="Write changes done to the article...")
         #buttons
-          button#save Propose
+          button#propose Propose
