--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -31,12 +31,15 @@ button:hover
   width 1050px
   margin 0 auto
 
-.rectangular-frame
-  width 440px
-  height 375px
+.frame
   padding 20px
   border-radius 3px
   border solid 1px #CFCFCF
+
+.rectangular-frame
+  @extend .frame
+  width 440px
+  height 375px
   float left
 
 .article-content
