Able to view article proposals

--- a/public/views/article.jade
+++ b/public/views/article.jade
@@ -12,5 +12,5 @@ block main
   include templates/viewable-article
 
   #buttons
-    button#editBtn(href= editUrl) Edit
-    button#addProposal(href= editUrl) Add proposal
+    button#addProposal(href= editUrl) Add Proposal
+    button#viewProposals(href= viewProposalsUrl) View Proposals
