--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -4,5 +4,17 @@
   
 #buttons
   clear both
-
+  padding-top 15px
   
+#main button
+  margin-left 10px
+  
+.rectangular-frame
+  height inherit
+  margin: 5px;
+
+#output.rectangular-frame
+  margin-left 0px
+  
+.rectangular-frame:not(:first-child)
+  margin-left 20px
