--- a/public/views/templates/proposals.jade
+++ b/public/views/templates/proposals.jade
@@ -1,4 +1,5 @@
-h1 Proposals
+h1 Change Proposals
+button#addProposal(href= editUrl) Add New
 #proposals
   ul
     script#proposals-template(type="x-tmpl-mustache") 
@@ -8,4 +9,7 @@ h1 Proposals
         img.avatar(src="/images/avatar.png")
         a.description(href="{{url}}") {{description}}
         i  by Him 
+        input#acceptBtn(type="image" src="/images/add-icon.png")
+        input#rejectBtn(type="image" src="/images/remove-icon.png")
       {{/props}}
+  button#viewProposals(href= viewProposalsUrl) View Proposals
