Some more changes

--- a/public/public/stylesheets/add_proposal.styl
+++ b/public/public/stylesheets/add_proposal.styl
@@ -2,3 +2,9 @@
 #propose-frame.rectangular-frame
   height 120px
   margin-top 20px
+  
+#changesDescription
+  width 414px
+  margin 14px
+  margin-left 20px
+  margin-bottom 5px
