--- a/public/views/templates/proposals.jade
+++ b/public/views/templates/proposals.jade
@@ -1,5 +1,5 @@
-h1 Change Proposals
-button#addProposal(href= editUrl) Add New
+h1 Proposed changes
+button#addProposal(onclick= onClickAddProposal) Add New
 #proposals
   ul
     script#proposals-template(type="x-tmpl-mustache") 
