--- a/public/views/templates/viewable-article.jade
+++ b/public/views/templates/viewable-article.jade
@@ -3,4 +3,4 @@ include rendered-article
   include dependencies
 .rectangular-frame
   include proposals
-  button#viewProposals(href= viewProposalsUrl) View Proposals
+  button#viewProposals(onclick= onClickAddProposal) View Proposals
