--- a/public/views/templates/viewable-article.jade
+++ b/public/views/templates/viewable-article.jade
@@ -1,6 +1,7 @@
+input.score-arrow.up-score-arrow(type="image" src="/images/up-score.png")
+#article-score
+  | 3
+input.score-arrow.down-score-arrow(type="image" src="/images/down-score.png")
 include rendered-article
 .rectangular-frame
-  include dependencies
-.rectangular-frame
-  include proposals
-  button#viewProposals(onclick= onClickAddProposal) View Proposals
+  h1 Information
