Add score arrows to article

--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -6,10 +6,6 @@ a
   color: #00B7FF
   text-decoration: none;
 
-#main
-  margin-top: 10px
-  padding: 20px
-
 button
 input[type="submit"]
   font-family 'Helvetica Neue',Helvetica,Arial,sans-serif;
@@ -27,9 +23,15 @@ button:hover
   background-color #1C97A4;
   background-image none
 
+#main
+  margin-top 15px
+
+#main-left
+  width 105px
+  float left
+
 .childContainer
   width 1050px
-  margin 0 auto
 
 .frame
   padding 20px
