--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -23,7 +23,9 @@ html
     script(type='text/javascript', src='/scripts/app.js')
   body
     include header/header
-    #main.parentContainer
-      .childContainer
-        block main
+    #main
+      #main-left
+        block main-left
+      #main-center
+        block main-center
     #footer
