Partial article votes (no user)

--- a/public/views/article.jade
+++ b/public/views/article.jade
@@ -8,10 +8,10 @@ append styles
   link(rel='stylesheet', href='/stylesheets/article.css')
 
 block main-left
-  input.score-arrow#up-score-button(type="image" src="/images/up-score.png")
+  input.score-arrow#up-score(type="image" src="/images/up-score.png")
   #article-score
     | 3
-  input.score-arrow#down-score-button(type="image" src="/images/down-score.png")
+  input.score-arrow#down-score(type="image" src="/images/down-score.png")
 
 
 block main-center
