Add partial views

--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -24,8 +24,5 @@ html
   body
     include header/header
     #main
-      #main-left
-        block main-left
-      #main-center
-        block main-center
+      block main
     #footer
