--- a/public/views/article.jade
+++ b/public/views/article.jade
@@ -1,21 +1,4 @@
-﻿extends layout
+extends base-article
 
-prepend scripts
-  script.
-    guiName = 'ArticleGui'
-
-append styles
-  link(rel='stylesheet', href='/stylesheets/article.css')
-
-block main-left
-  input.score-arrow.up-score#up-score-on(type="image" src="/images/up-score-on.png" style="display:none")
-  input.score-arrow.up-score#up-score-off(type="image" src="/images/up-score-off.png")
-  #article-score
-    | 3
-  input.score-arrow.down-score#down-score-on(type="image" src="/images/down-score-on.png" style="display:none")
-  input.score-arrow.down-score#down-score-off(type="image" src="/images/down-score-off.png")
-
-
-block main-center
-  input#article-id(type="hidden" value= id)
-  include templates/viewable-article
+block main
+  include partials/article
