base article view added

--- a/public/views/base-article.jade
+++ b/public/views/base-article.jade
@@ -2,7 +2,7 @@
 
 prepend scripts
   script.
-    guiName = 'ArticleGui'
+    guiName = 'BaseArticleGui'
 
 append styles
   link(rel='stylesheet', href='/stylesheets/article.css')
