--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -1,21 +1,4 @@
-﻿extends layout
-
-prepend scripts
-  script.
-    guiName = 'EditArticleGui'
-
-append styles
-  link(rel='stylesheet', href='/stylesheets/edit_article.css')
+﻿extends base-article
 
 block main
-  input#article-id(type="hidden" value= id)
-  include templates/previewable-article
-  #second-floor
-    #save-frame.rectangular-frame
-      h1 Changes description
-        div
-          input#changesDescription.selectize-input(type="text" placeholder="Write changes done to the article...")
-        #buttons
-          button#save Save
-          button#cancel Cancel
-    include templates/editable-dependencies
+  include partials/article
