Almost done, single view app

--- a/public/views/partials/edit_article.jade
+++ b/public/views/partials/edit_article.jade
@@ -3,7 +3,7 @@
 
   #main-center
     input#article-id(type="hidden" value= id)
-    include templates/previewable-article
+    include ../templates/previewable-article
     #second-floor
       #save-frame.rectangular-frame
         h1 Changes description
@@ -12,4 +12,4 @@
           #buttons
             button#save Save
             button#cancel Cancel
-      include templates/editable-dependencies
+      include ../templates/editable-dependencies
