--- a/public/views/partials/article.jade
+++ b/public/views/partials/article.jade
@@ -10,3 +10,4 @@
   #main-center
     input#article-id(type="hidden" value= id)
     include ../templates/viewable-article
+    a#editArticle(href= edit_url) Edit
