--- a/public/views/partials/edit_article.jade
+++ b/public/views/partials/edit_article.jade
@@ -1,7 +1,7 @@
 .partial.edit-article-partial(style='display:none')
-  #main-left
+  .main-left
 
-  #main-center
+  .main-center
     input#article-id(type="hidden" value= id)
     include ../templates/previewable-article
     #second-floor
