--- a/public/views/partials/article.jade
+++ b/public/views/partials/article.jade
@@ -8,5 +8,7 @@
     input.score-arrow.down-score#down-score-off(type="image" src="/images/down-score-off.png")
 
   .main-center
+    .crumb
+      a#article-crumb Article
     include ../templates/viewable-article
     a#editArticle(href= edit_url) Edit
