--- a/public/views/partials/edit_article.jade
+++ b/public/views/partials/edit_article.jade
@@ -2,14 +2,8 @@
   .main-left
 
   .main-center
-    input#article-id(type="hidden" value= id)
+    .crumb
+      a#article-crumb Article 
+      | > 
+      a#edit-article-crumb Edit article 
     include ../templates/previewable-article
-    #second-floor
-      #save-frame.rectangular-frame
-        h1 Changes description
-          div
-            input#changesDescription.selectize-input(type="text" placeholder="Write changes done to the article...")
-          #buttons
-            button#save Save
-            button#cancel Cancel
-      include ../templates/editable-dependencies
