Add octicons and start with changes for the articles

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -9,13 +9,13 @@
 #main button
   margin-left 10px
   
+#changes-frame
+  clear both
+  
 .rectangular-frame
   height inherit
   margin: 5px;
 
-#output.rectangular-frame
-  margin-left 0px
-  
 .rectangular-frame:not(:first-child)
   margin-left 20px
 
