--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -32,6 +32,10 @@ button:hover
 .main-left
   width 105px
   float left
+  
+.main-center
+  width 1200px
+  float left
 
 .childContainer
   width 1050px
