--- a/public/views/layout.jade
+++ b/public/views/layout.jade
@@ -8,6 +8,7 @@ html
     link(rel="stylesheet", href="/stylesheets/layout.css")
     link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.1/jquery.qtip.min.css")
     link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/selectize.js/0.11.0/css/selectize.css")
+    link(rel="stylesheet", href="/octicons/octicons.css")
     script(type='text/javascript', src='/scripts/lib/jquery-2.1.1.js')
     script(type='text/javascript', src='/scripts/lib/diff.js')
     script(type='text/javascript', src='/scripts/lib/marked.js')
