--- a/public/views/partials/article.jade
+++ b/public/views/partials/article.jade
@@ -12,3 +12,4 @@
       a#article-crumb Article
     include ../templates/viewable-article
     a#editArticle(href= edit_url) Edit
+    include ../templates/article-change-preview-template
